--- a/css/styles.css
+++ b/css/styles.css
@@ -566,6 +566,11 @@ em {
     align-items: center;
     justify-content: center;
     height: 36px;
+    width: 100%;
+}
+
+.tech-item .tech-icon-text {
+    filter: drop-shadow(0 0.001px 10px rgba(255, 255, 255, 0.417));
 }
 
 .tech-item {
